--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "link": "^2.1.1",
+    "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-native": "^0.74.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
